<resources>
    <string name="app_name">DSide</string>
    <string name="log_in_underlined"><u>Log In</u></string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>
    <string name="recover_underlined"><u>Send Recovery Email</u></string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="flip">Flip</string>
    <string name="write">Write</string>
    <string name="back">Back</string>
    <string name="read">Read</string>
    <string name="activity_id">Activity ID</string>
    <string name="activity_phone">Activity Phone</string>
    <string name="activity_image">Activity Image</string>
    <string name="activity_location">Activity Location</string>
    <string name="location_address">Location Address</string>
    <string name="location_city">Location City</string>
    <string name="location_country">Location Country</string>
    <string name="location_zip">Location Zip</string>
    <string name="location_state">Location State</string>
    <string name="activity_business_name">Activity Business Name</string>
    <string name="activity_price">Activity Price</string>
    <string name="activity_title">Activity Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>